[gd_scene load_steps=3 format=3 uid="uid://bgyfajmd4uo8x"]

[ext_resource type="Script" path="res://GameplayThings/Items/general_scene_for_items.gd" id="1_gr3nm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mtyx2"]
radius = 30.1846

[node name="GeneralSceneForItems" type="Node2D"]
z_index = 10
script = ExtResource("1_gr3nm")

[node name="Container" type="Container" parent="."]
offset_left = -5.0
offset_top = -5.0
offset_right = 53.0
offset_bottom = 47.0

[node name="detectPlayer" type="Area2D" parent="."]
position = Vector2(-3, -3)
scale = Vector2(1.39279, 1.34809)

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectPlayer"]
position = Vector2(19, 19)
scale = Vector2(1.2, 1.2)
shape = SubResource("CircleShape2D_mtyx2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(20, 20)
scale = Vector2(1.2, 1.2)

[connection signal="gui_input" from="Container" to="." method="_on_container_gui_input"]
[connection signal="body_entered" from="detectPlayer" to="." method="_on_detect_player_body_entered"]
[connection signal="body_exited" from="detectPlayer" to="." method="_on_detect_player_body_exited"]
